--- a/Practical_11/src/main/resources/application.properties
+++ b/Practical_11/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Practical_11
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=metrics,prometheus
